<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_2_number">2 Số</string>
    <string name="action_3_number">3 Số</string>
    <string name="action_full">Đầy đủ</string>
    <string name="action_next">Sau</string>
    <string name="action_previous">Trước</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Xổ Số 3 Miền</string>
    <string name="app_title">Xổ Số Trực Tuyến</string>
    <string name="app_title_keno">Xổ Số KENO</string>
    <string name="app_title_max_3d">Xổ Số MAX3D</string>
    <string name="app_title_max_3d_pro">Xổ Số MAX3D Pro</string>
    <string name="app_title_mega">Xổ Số MEGA 6/45</string>
    <string name="app_title_power">Xổ Số POWER 6/55</string>
    <string name="app_website">Nhanh, Chính Xác</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_satisfied">Bạn có thấy hài lòng không?</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">00000000000000000000000000000000</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="default_notification_channel_id">22022022</string>
    <string name="default_web_client_id">197857322917-u4lh2reqkh735oi65uqjgnktkccic8gj.apps.googleusercontent.com</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_and_retry">Đã có lỗi xảy ra, vui lòng kiểm tra kết nối mạng và thử lại.</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="feedback">Phản hồi</string>
    <string name="fetching_data">Đang lấy dữ liệu…</string>
    <string name="gcm_defaultSenderId">197857322917</string>
    <string name="google_api_key">AIzaSyAwdZ--cQx4y869eMzd8UtDaNzfLuYb1to</string>
    <string name="google_app_id">1:197857322917:android:e520ac6cb00aae189d2a4c</string>
    <string name="google_crash_reporting_api_key">AIzaSyAwdZ--cQx4y869eMzd8UtDaNzfLuYb1to</string>
    <string name="google_storage_bucket">xskt-bc5ea.appspot.com</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="home_page">Trang Chủ</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="intro_message_1">16h10 Trực tiếp xổ số Miền Nam</string>
    <string name="intro_message_2">17h15 Trực tiếp xổ số Miền Trung</string>
    <string name="intro_message_3">18h10 Trức tiếp xổ số Miền Bắc</string>
    <string name="intro_title">Xổ số trực tuyến ngay trong app</string>
    <string name="item_view_role_description">Tab</string>
    <string name="jackpot">Jackpot</string>
    <string name="jackpot_1">Jackpot 1</string>
    <string name="jackpot_1_rule">Trùng 6 Số</string>
    <string name="jackpot_2">Jackpot 2</string>
    <string name="jackpot_2_rule">5 số + Power</string>
    <string name="jackpot_pz_1">Giải 1</string>
    <string name="jackpot_pz_1_rule">Trùng 5 Số</string>
    <string name="jackpot_pz_2">Giải 2</string>
    <string name="jackpot_pz_2_rule">Trùng 4 Số</string>
    <string name="jackpot_pz_3">Giải 3</string>
    <string name="jackpot_pz_3_rule">Trùng 3 Số</string>
    <string name="keno_num_of_chose">Chọn %d số</string>
    <string name="keno_rule">Trùng %02d trong 20 số</string>
    <string name="keno_rule_header">Xác định kết quả</string>
    <string name="kq_dien_toan_123">KQXS Điện Toán 1 2 3</string>
    <string name="kq_dien_toan_636">KQXS Điện Toán 6x36</string>
    <string name="kq_dien_toan_than_tai">KQXS Điện Toán Thần Tài</string>
    <string name="kq_xs_dien_toan_mb">KQXS Điện Toán Miền Bắc</string>
    <string name="ky_xo">Kỳ Xổ : %s</string>
    <string name="loto_start">Đầu</string>
    <string name="lottery_digital">Xổ số Điện Toán Vietlott</string>
    <string name="lottery_statistic">Thống kê &amp; phân tích KQXS</string>
    <string name="lottery_system">Hệ thống Xổ Số &amp; Tiện Ích</string>
    <string name="lottery_tradition">Xổ số kiến thiết</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0.0, 0.8, 0.2)</string>
    <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1.0)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0.0, 0.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard_accelerate">cubic-bezier(0.3, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard_decelerate">cubic-bezier(0.0, 0.0, 0.0, 1.0)</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">%1$s o\'clock</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="normal">Bình thường</string>
    <string name="prize_quantity">SL</string>
    <string name="prize_value">Giá trị</string>
    <string name="region_middle">Miền Trung</string>
    <string name="region_south">Miền Nam</string>
    <string name="satisfied">Hài lòng</string>
    <string name="select_province">Chọn tỉnh/TP</string>
    <string name="understand">Đã hiểu</string>
    <string name="xoso_of_middle">Xổ Số Miền Trung</string>
    <string name="xoso_of_north">Xổ Số Miền Bắc</string>
    <string name="xoso_of_south">Xổ Số Miền Nam</string>
</resources>