<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@drawable/bg_keno_table_header" android:padding="@dimen/layout_padding_small" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_padding_medium">
    <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@color/black" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/keno_rule_header" android:layout_weight="0.5"/>
    <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@color/black" android:gravity="center" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/prize_quantity" android:layout_weight="0.2"/>
    <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@color/black" android:gravity="end" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/prize_value" android:layout_weight="0.3"/>
</LinearLayout>
