<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ImageView android:id="@+id/imageView" android:background="@drawable/bg_intro" android:layout_width="match_parent" android:layout_height="0dp" android:scaleType="centerInside" android:adjustViewBounds="true" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintDimensionRatio="666:474" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_22" android:layout_marginRight="@dimen/dp_22" android:layout_marginHorizontal="@dimen/dp_22" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <TextView android:textSize="@dimen/sp_18" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/intro_title" android:lines="1"/>
        <TextView android:textSize="@dimen/sp_16" android:textColor="@color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16" android:text="@string/intro_message_1" android:lines="1"/>
        <TextView android:textSize="@dimen/sp_16" android:textColor="@color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16" android:text="@string/intro_message_2" android:lines="1"/>
        <TextView android:textSize="@dimen/sp_16" android:textColor="@color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16" android:text="@string/intro_message_3" android:lines="1"/>
        <TextView android:textSize="@dimen/sp_16" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/tvUnderstand" android:background="@drawable/bg_corner_4" android:paddingLeft="@dimen/dp_80" android:paddingTop="@dimen/dp_12" android:paddingRight="@dimen/dp_80" android:paddingBottom="@dimen/dp_12" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16" android:text="@string/understand" android:lines="1" android:paddingHorizontal="@dimen/dp_80" android:paddingVertical="@dimen/dp_12"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>
