<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/layout_padding_normal" android:paddingTop="@dimen/layout_padding_large" android:paddingRight="@dimen/layout_padding_normal" android:paddingBottom="@dimen/layout_padding_large" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true" android:paddingHorizontal="@dimen/layout_padding_normal" android:paddingVertical="@dimen/layout_padding_large">
        <com.veso.online.widgets.MenuSectionLayout android:id="@+id/menus_tradition_lottery" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/layout_padding_medium" app:titleIcon="@drawable/ic_lottery_tradition" app:titleText="@string/lottery_tradition"/>
        <include layout="@layout/layout_ads_banner"/>
        <com.veso.online.widgets.MenuSectionLayout android:id="@+id/menus_digital_lottery" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_padding_medium" android:layout_marginBottom="@dimen/layout_padding_medium" android:layout_marginVertical="@dimen/layout_padding_medium" app:titleIcon="@drawable/ic_lottery_digital" app:titleText="@string/lottery_digital"/>
        <include layout="@layout/layout_ads_banner"/>
        <com.veso.online.widgets.MenuSectionLayout android:id="@+id/menus_statistic" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_padding_medium" android:layout_marginBottom="@dimen/layout_padding_medium" android:layout_marginVertical="@dimen/layout_padding_medium" app:isMoveToWebHidden="false" app:titleIcon="@drawable/ic_bar_chart" app:titleText="@string/lottery_statistic"/>
        <include layout="@layout/layout_ads_banner"/>
        <com.veso.online.widgets.MenuSectionLayout android:id="@+id/menus_system_media" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_padding_medium" android:layout_marginBottom="@dimen/layout_padding_medium" android:layout_marginVertical="@dimen/layout_padding_medium" app:titleIcon="@drawable/ic_settings" app:titleText="@string/lottery_system"/>
    </LinearLayout>
</ScrollView>
