<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="@dimen/layout_padding_normal" android:paddingRight="@dimen/layout_padding_normal" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingHorizontal="@dimen/layout_padding_normal">
    <ImageView android:id="@+id/iv_menu_icon" android:layout_width="@dimen/left_menu_icon_width" android:layout_height="match_parent" android:src="@drawable/ic_vietnam" android:contentDescription="@null"/>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14sp" android:textColor="@color/black" android:id="@+id/tv_xoso_north" android:paddingTop="@dimen/layout_padding_small" android:paddingBottom="@dimen/layout_padding_small" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/xoso_of_north" android:paddingVertical="@dimen/layout_padding_small"/>
        <TextView android:textSize="14sp" android:textColor="@color/black" android:id="@+id/tv_xoso_middle" android:paddingTop="@dimen/layout_padding_small" android:paddingBottom="@dimen/layout_padding_small" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/xoso_of_middle" android:paddingVertical="@dimen/layout_padding_small"/>
        <TextView android:textSize="14sp" android:textColor="@color/black" android:id="@+id/tv_xoso_south" android:paddingTop="@dimen/layout_padding_small" android:paddingBottom="@dimen/layout_padding_small" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/xoso_of_south" android:paddingVertical="@dimen/layout_padding_small"/>
    </LinearLayout>
</LinearLayout>
