<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@drawable/bg_dien_toan_item" android:padding="@dimen/layout_padding_small" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_padding_small" android:layout_marginBottom="@dimen/layout_padding_small" android:layout_marginVertical="@dimen/layout_padding_small">
    <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/primary" android:gravity="center" android:id="@+id/tv_dien_toan_date" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="10/07/2022"/>
    <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@color/black" android:id="@+id/tv_dien_toan_123" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_padding_tiny" android:text="@string/kq_dien_toan_123"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/ll_dien_toan_123" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_padding_tiny"/>
    <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@color/black" android:id="@+id/tv_dien_toan_636" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_padding_tiny" android:text="@string/kq_dien_toan_636"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/ll_dien_toan_636" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_padding_tiny"/>
    <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@color/black" android:id="@+id/tv_dien_toan_than_tai" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_padding_tiny" android:text="@string/kq_dien_toan_than_tai"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/ll_dien_toan_than_tai" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_padding_tiny"/>
</LinearLayout>
