<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:animateLayoutChanges="true">
    <LinearLayout android:gravity="center_vertical" android:background="@color/primary" android:paddingLeft="@dimen/layout_padding_small" android:paddingRight="@dimen/layout_padding_small" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingHorizontal="@dimen/layout_padding_small">
        <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/white" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/select_province" android:layout_weight="1"/>
        <ImageButton android:id="@+id/ib_close" android:background="?attr/selectableItemBackgroundBorderless" android:padding="@dimen/layout_padding_tiny" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_close_24" android:contentDescription="@null"/>
    </LinearLayout>
    <include android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/layout_padding_normal" android:layout_marginTop="@dimen/dp_8" android:layout_marginRight="@dimen/layout_padding_normal" android:layout_marginBottom="@dimen/dp_8" android:layout_marginHorizontal="@dimen/layout_padding_normal" android:layout_marginVertical="@dimen/dp_8" layout="@layout/layout_ads_banner"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <LinearLayout android:orientation="vertical" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
            <TextView android:textSize="16sp" android:textStyle="bold" android:paddingLeft="@dimen/layout_padding_small" android:paddingTop="4dp" android:paddingRight="@dimen/layout_padding_small" android:paddingBottom="4dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/region_south" android:paddingHorizontal="@dimen/layout_padding_small" android:paddingVertical="4dp"/>
            <View android:background="@color/divider" android:layout_width="match_parent" android:layout_height="1px"/>
            <androidx.recyclerview.widget.RecyclerView android:id="@+id/rcv_picker_south" android:layout_width="match_parent" android:layout_height="match_parent"/>
        </LinearLayout>
        <View android:background="@color/divider" android:layout_width="1px" android:layout_height="match_parent"/>
        <LinearLayout android:orientation="vertical" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
            <TextView android:textSize="16sp" android:textStyle="bold" android:paddingLeft="@dimen/layout_padding_small" android:paddingTop="4dp" android:paddingRight="@dimen/layout_padding_small" android:paddingBottom="4dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/region_middle" android:paddingHorizontal="@dimen/layout_padding_small" android:paddingVertical="4dp"/>
            <View android:background="@color/divider" android:layout_width="match_parent" android:layout_height="1px"/>
            <androidx.recyclerview.widget.RecyclerView android:id="@+id/rcv_picker_middle" android:layout_width="match_parent" android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
