<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ImageView android:padding="0dp" android:layout_width="@dimen/dp_80" android:layout_height="@dimen/dp_80" android:src="@drawable/ic_rate_logo" android:scaleType="fitXY" android:adjustViewBounds="true" android:translationZ="@dimen/dp_16" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <androidx.appcompat.widget.AppCompatImageView android:id="@+id/ivClose" android:padding="@dimen/dp_8" android:layout_width="@dimen/dp_32" android:layout_height="@dimen/dp_32" android:layout_marginTop="@dimen/dp_48" android:src="@drawable/ic_close" android:adjustViewBounds="true" android:tint="@color/white" android:layout_marginEnd="@dimen/dp_8" android:translationZ="@dimen/dp_16" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0"/>
    <androidx.cardview.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_40" android:elevation="0dp" app:cardBackgroundColor="@color/primary" app:cardCornerRadius="@dimen/dp_22" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <androidx.appcompat.widget.LinearLayoutCompat android:layout_gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/sp_18" android:textColor="@color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_48" android:text="@string/are_you_satisfied"/>
            <androidx.appcompat.widget.LinearLayoutCompat android:orientation="horizontal" android:background="@color/white" android:paddingLeft="@dimen/dp_8" android:paddingTop="@dimen/dp_16" android:paddingRight="@dimen/dp_8" android:paddingBottom="@dimen/dp_16" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16" android:paddingHorizontal="@dimen/dp_8" android:paddingVertical="@dimen/dp_16">
                <androidx.appcompat.widget.LinearLayoutCompat android:gravity="center_horizontal" android:orientation="vertical" android:id="@+id/llFeedback" android:background="@drawable/bg_corner_14_with_border_primary" android:paddingTop="@dimen/dp_8" android:paddingBottom="@dimen/dp_8" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="@dimen/dp_16" android:layout_marginRight="@dimen/dp_16" android:foreground="?android:attr/selectableItemBackground" android:layout_weight="1" android:layout_marginHorizontal="@dimen/dp_16" android:paddingVertical="@dimen/dp_8">
                    <ImageView android:layout_width="@dimen/dp_80" android:layout_height="@dimen/dp_80" android:src="@drawable/ic_rate_feedback"/>
                    <TextView android:textSize="@dimen/sp_16" android:textColor="@color/black" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_8" android:layout_marginBottom="@dimen/dp_8" android:text="@string/normal" android:lines="1" android:layout_marginVertical="@dimen/dp_8"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat android:gravity="center_horizontal" android:orientation="vertical" android:id="@+id/llSatisfy" android:background="@drawable/bg_corner_14_with_border_primary" android:paddingTop="@dimen/dp_8" android:paddingBottom="@dimen/dp_8" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_16" android:layout_marginRight="@dimen/dp_16" android:foreground="?android:attr/selectableItemBackground" android:layout_weight="1" android:layout_marginHorizontal="@dimen/dp_16" android:paddingVertical="@dimen/dp_8">
                    <ImageView android:layout_width="@dimen/dp_80" android:layout_height="@dimen/dp_80" android:src="@drawable/ic_rate_satisfy"/>
                    <TextView android:textSize="@dimen/sp_16" android:textColor="@color/black" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_8" android:layout_marginBottom="@dimen/dp_8" android:text="@string/satisfied" android:lines="1" android:layout_marginVertical="@dimen/dp_8"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
